Record detail, report repos/records, reports by repo/record (#5)
* Support temporary admin auth via token

* Add react-query

* Wire-up pagination for repos

* Paginated repo list

* Support repos search

* Tidy search input & param sync

* Wiring for reports page

* Add date-fns

* Tidy repos

* Desktop UI for reports list

* Mobile UI for reports list

* Tidy

* Add UI for take action from reports list

* Setup generic button, form, action panel components

* Improvements to datetime presentation in tables

* Create and wire-up mod action panel on reports table

* Show repo/record preview in mod action panel

* Tidy

* Fix api dep

* Tidy, consistency, remove todos on repo page

* Support reporting repos and posts

* Consistency in data fetching for author feed

* Add reports tab to repo detail

* UI and wiring for generic record detail

* Avoid extra clicks when only one option for moderation action

* Add post thread to record detail view

* Fix some typechecks for next build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es2015",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -18,7 +18,8 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "noImplicitAny": false
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
