--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Yarn install
         run: yarn
+      - name: Typescript Check
+        run: yarn type-check
       - name: Build
-        run: |
-          yarn build
+        run: yarn build
