:sparkles: Show subject repo handle and avatar in reports table (#103)
* :sparkles: Show subject repo handle and avatar in reports table

* :sparkles: Show repo handle on report subject column

* :rewind: Revert package.json changes

* :broom: Fix import alias issue

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,6 @@
       "@/repositories/*": ["components/repositories/*"],
     }
   },
-  "include": ["next-env.d.ts", "app/*", "lib/*", "components/*", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/**/**/*.tsx", "**/**/**/*.ts", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
