:white_check_mark: Add cypress test-suite and github workflow (#113)
* :white_check_mark: Add cypress test-suite and github workflow

* :broom: Cleanup unnecesary cypress code

* :broom: Cleanup unnecesary cypress code

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,5 +31,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/**/**/*.tsx", "**/**/**/*.ts", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "cypress/*"]
 }
