--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "cypress": "cypress open",
+    "e2e:run": "$(yarn bin)/cypress run"
   },
   "dependencies": {
     "@atproto/api": "^0.3.11",
@@ -36,6 +38,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.8",
     "autoprefixer": "^10.4.13",
+    "cypress": "^12.14.0",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
   }
