--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-tetris": "^0.3.0",
     "react-toastify": "^9.1.1",
     "react-use": "^17.4.0",
     "typescript": "4.9.4"
