:lipstick: Add new lifeguard logo (#122)
* :lipstick: Add new lifeguard logo

* :lipstick: Upgrade next.js and use new logo in UI and favicon

* :bug: Fix build

* :memo: Add docs for logo attribution

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
       "@/reports/*": ["components/reports/*"],
       "@/invites/*": ["components/invites/*"],
       "@/repositories/*": ["components/repositories/*"],
+      "@/entertainment/*": ["components/entertainment/*"],
     }
   },
   "include": ["next-env.d.ts", "**/**/**/*.tsx", "**/**/**/*.ts", ".next/types/**/*.ts"],
