--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "bcp-47-match": "^2.0.3",
     "date-fns": "^2.29.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.4.8",
     "kbar": "^0.1.0-beta.40",
+    "lande": "^1.0.10",
     "next": "13.4.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
