CI: run on any PR; and any push to main

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -2,10 +2,9 @@ name: E2E Cypress Tests
 
 on:
   pull_request:
+  push:
     branches:
       - main
-      - develop
-      - staging
 
 jobs:
   cypress-run:
