--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,8 @@
 services:
   - type: web
-    name: redsky-staging
+    name: ozone-staging
     env: node
-    repo: https://github.com/bluesky-social/redsky
+    repo: https://github.com/bluesky-social/ozone
     buildCommand: yarn && yarn build
     startCommand: yarn start
     healthCheckPath: /
