--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@uiw/react-md-editor": "^3.23.5",
     "bcp-47-match": "^2.0.3",
     "date-fns": "^2.29.3",
     "eslint": "8.30.0",
@@ -36,6 +37,8 @@
     "react-tetris": "^0.3.0",
     "react-toastify": "^9.1.1",
     "react-use": "^17.4.0",
+    "remark": "^14.0.3",
+    "remark-html": "^15.0.2",
     "typescript": "4.9.4"
   },
   "devDependencies": {
