--- a/service/compose.yaml
+++ b/service/compose.yaml
@@ -15,6 +15,8 @@ services:
       - type: bind
         source: /ozone/caddy/etc/caddy
         target: /etc/caddy
+    labels:
+      - 'com.centurylinklabs.watchtower.enable=true'
   ozone:
     container_name: ozone
     image: ghcr.io/bluesky-social/ozone-ui:0.1 # @TODO set initial tag
