Ozone frontend/backend build and account setup (#35)
* setup dockerfile and service entrypoint for frontend/backend deployed together

* gitignore/yarnlock tidy

* auth state for ozone configuration

* update api package

* plc/identity setup workflow

* tidy/fixes

* record creation flow on login

* reorg client config / configuration flow

* skip record creation step if not service account

* tidy

* rename metadata endpoint

* fix

* reorg plc constants, bring plc functionality into lib/identity

* make generic ErrorInfo component

* misc fixes

* fix cypress

* websocket fix

* add docker workflow

* update ozone version

* fix entrypoint order of operations

* fix next build / rel paths

---------

Co-authored-by: Foysal Ahamed <foysal@blueskyweb.xyz>

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/service/node_modules
 /.pnp
 .pnp.js
 
@@ -39,3 +40,4 @@ next-env.d.ts
 cypress/videos
 
 .env
+.ozone.env
