--- a/service/package.json
+++ b/service/package.json
@@ -3,7 +3,7 @@
   "description": "Ozone service entrypoint",
   "main": "index.js",
   "dependencies": {
-    "@atproto/ozone": "^0.0.17-next.1",
+    "@atproto/ozone": "0.1.0",
     "next": "14.0.1"
   }
 }
