:white_check_mark: Add artifacts
:white_check_mark: Add artifacts

:white_check_mark: Add artifacts

:white_check_mark: Add artifacts

:white_check_mark: Add artifacts

:white_check_mark: Add artifacts

:white_check_mark: Add artifacts

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -16,10 +16,21 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 20
-      # Install NPM dependencies, cache them correctly
-      # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with:
           build: yarn build
           start: yarn start
+      - name: Setup Screenshot Artifacts
+        if: failure()
+        uses: actions/upload-artifact@v3
+        with:
+          name: cypress-screenshots
+          path: cypress/screenshots
+      - name: Setup Video Artifacts
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: cypress-videos
+          path: cypress/videos
+        
