:construction: WIP oauth

--- a/package.json
+++ b/package.json
@@ -17,7 +17,22 @@
     "e2e:run": "$(yarn bin)/cypress run"
   },
   "dependencies": {
-    "@atproto/api": "^0.11.1",
+    "@atproto/api": "link:../atproto/packages/api/dist",
+    "@atproto/caching": "link:../atproto/packages/caching/dist",
+    "@atproto/did": "link:../atproto/packages/did/dist",
+    "@atproto/disposable-polyfill": "link:../atproto/packages/disposable-polyfill/dist",
+    "@atproto/fetch": "link:../atproto/packages/fetch/dist",
+    "@atproto/handle-resolver": "link:../atproto/packages/handle-resolver/dist",
+    "@atproto/identity-resolver": "link:../atproto/packages/identity-resolver/dist",
+    "@atproto/indexed-db": "link:../atproto/packages/indexed-db/dist",
+    "@atproto/jwk": "link:../atproto/packages/jwk/dist",
+    "@atproto/jwk-jose": "link:../atproto/packages/jwk-jose/dist",
+    "@atproto/jwk-webcrypto": "link:../atproto/packages/jwk-webcrypto/dist",
+    "@atproto/oauth-client": "link:../atproto/packages/oauth-client/dist",
+    "@atproto/oauth-client-metadata": "link:../atproto/packages/oauth-client-metadata/dist",
+    "@atproto/oauth-client-browser": "link:../atproto/packages/oauth-client-browser/dist",
+    "@atproto/oauth-server-metadata": "link:../atproto/packages/oauth-server-metadata/dist",
+    "@atproto/oauth-server-metadata-resolver": "link:../atproto/packages/oauth-server-metadata-resolver/dist",
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
     "@tanstack/react-query": "^4.22.0",
