:sparkles: Add message actor data display and event/action details

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,7 @@
       "@/entertainment/*": ["components/entertainment/*"],
       "@/mod-event/*": ["components/mod-event/*"],
       "@/subject/*": ["components/subject/*"],
+      "@/dms/*": ["components/dms/*"],
     }
   },
   "include": ["next-env.d.ts", "**/**/**/*.tsx", "**/**/**/*.ts", ".next/types/**/*.ts"],
