:sparkles: Show content for each subject that can be toggled

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,7 @@
       "@/mod-event/*": ["components/mod-event/*"],
       "@/subject/*": ["components/subject/*"],
       "@/dms/*": ["components/dms/*"],
+      "@/workspace/*": ["components/workspace/*"],
     }
   },
   "include": ["next-env.d.ts", "**/**/**/*.tsx", "**/**/**/*.ts", ".next/types/**/*.ts"],
