--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-use": "^17.4.0",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "yet-another-react-lightbox": "^3.20.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
