--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "next lint",
     "type-check": "tsc --noEmit",
     "cypress": "cypress open",
-    "e2e:run": "$(yarn bin)/cypress run"
+    "e2e:run": "$(yarn bin)/cypress run --browser chrome"
   },
   "dependencies": {
     "@atproto/api": "0.12.22",
