✨ Workspace for bulk actions (#140)
* :sparkles: Show content for each subject that can be toggled

* :sparkles: Move success message rendering inside render()

* :sparkles: More ui triggers to add items to workspace

* :sparkles: Allow adding more items to workspace

* :sparkles: Add workspace modal in all pages

* :broom: Cleanup

* :white_check_mark: decodeURIComponent when asserting query param

* :white_check_mark: Specify chrome browser for cypress tests

* :white_check_mark: Add video artifacts

* :white_check_mark: Attempt to scroll item into view

* :white_check_mark: Attempt to scroll item into view

* :white_check_mark: Split tests into 2

* :white_check_mark: add waits

* :arrow_up: Upgrade next.js version

* :white_check_mark: Fix cypress input issue

* :white_check_mark: Remove video storage in github actions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,7 @@
       "@/subject/*": ["components/subject/*"],
       "@/config/*": ["components/config/*"],
       "@/dms/*": ["components/dms/*"],
+      "@/workspace/*": ["components/workspace/*"],
     }
   },
   "include": ["next-env.d.ts", "**/**/**/*.tsx", "**/**/**/*.ts", ".next/types/**/*.ts"],
