--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "next lint",
     "type-check": "tsc --noEmit",
     "cypress": "cypress open",
-    "e2e:run": "$(yarn bin)/cypress run"
+    "e2e:run": "$(yarn bin)/cypress run --browser chrome"
   },
   "dependencies": {
     "@atproto/api": "0.12.22",
@@ -31,7 +31,7 @@
     "eslint-config-next": "13.4.8",
     "kbar": "^0.1.0-beta.45",
     "lande": "^1.0.10",
-    "next": "14.0.1",
+    "next": "14.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-json-view": "1.21.3",
