--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "date-fns": "^2.29.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.4.8",
+    "hls.js": "^1.5.13",
     "kbar": "^0.1.0-beta.45",
     "lande": "^1.0.10",
     "next": "14.2.5",
