--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "e2e:run": "$(yarn bin)/cypress run --browser chrome"
   },
   "dependencies": {
-    "@atproto/api": "0.12.22",
+    "@atproto/api": "^0.13.1",
+    "@atproto/oauth-client-browser": "^0.1.3",
+    "@atproto/oauth-types": "^0.1.2",
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
     "@tanstack/react-query": "^4.22.0",
@@ -50,6 +52,9 @@
     "cypress": "^12.14.0",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
+  },  
+  "resolutions": {
+    "jackspeak": "2.1.1"
   },
   "volta": {
     "node": "20.9.0"
