--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
       "@/config/*": ["components/config/*"],
       "@/dms/*": ["components/dms/*"],
       "@/workspace/*": ["components/workspace/*"],
+      "@/sets/*": ["components/sets/*"],
     }
   },
   "include": [
