--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Moderation admin interface for atproto services",
   "license": "MIT or Apache 2.0",
   "engines": {
-    "node": ">=20"
+    "node": "20.x"
   },
   "scripts": {
     "dev": "next dev",
@@ -17,7 +17,7 @@
     "e2e:run": "$(yarn bin)/cypress run --browser chrome"
   },
   "dependencies": {
-    "@atproto/api": "^0.13.15",
+    "@atproto/api": "^0.13.16",
     "@atproto/oauth-client-browser": "^0.2.0",
     "@atproto/oauth-types": "^0.1.4",
     "@atproto/xrpc": "^0.6.1",
