--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next": "14.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.3.5",
     "react-json-view": "1.21.3",
     "react-tetris": "^0.3.0",
     "react-toastify": "^9.1.1",
