Ignore all `.env.*` files from Git

--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,6 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# local env files
-.env*.local
-
 # vercel
 .vercel
 
@@ -40,5 +37,7 @@ next-env.d.ts
 cypress/videos
 cypress/screenshots
 
+# local env files
 .env
+.env.*
 .ozone.env
