--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@atproto/oauth-types": "^0.1.4",
     "@atproto/xrpc": "^0.6.1",
     "@headlessui/react": "^1.7.7",
-    "@heroicons/react": "^2.0.13",
+    "@heroicons/react": "2.0.13",
     "@tanstack/react-query": "^4.22.0",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
