:sparkles: Add role and status filter for team list

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,7 @@
       "@/workspace/*": ["components/workspace/*"],
       "@/sets/*": ["components/sets/*"],
       "@/setting/*": ["components/setting/*"],
+      "@/team/*": ["components/team/*"],
     }
   },
   "include": [
