--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -34,5 +34,5 @@ jobs:
         if: failure()
         uses: actions/upload-artifact@v4
         with:
-          name: cypress-screenshots
-          path: cypress/screenshots
+          name: cypress-videos
+          path: cypress/videos
