:broom: Cleanup unnecessary yarn

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,12 @@ cypress/screenshots
 
 .env
 .ozone.env
+
+# yarn
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
