--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,19 +13,25 @@ jobs:
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v4
-        
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          
+
+      - name: Enable and use Corepack for Yarn
+        run: |
+          corepack enable
+          corepack prepare yarn@berry --activate
+          yarn --version  # This should show your Yarn v2+ version
+
       - name: Yarn install
         run: yarn
-        
+
       - name: Lint Reporter
         uses: wearerequired/lint-action@v2.2.0
         with:
           eslint: true
-          
+
       - name: Typescript & Lint check
         run: yarn lint
