--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Enable and use Corepack for Yarn
         run: |
           corepack enable
-          corepack prepare yarn@berry --activate
+          corepack prepare yarn@4.8.1 --activate
           yarn --version  # This should show your Yarn v2+ version
 
       - name: Check out Git repository
