--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Enable and use Corepack for Yarn
         run: |
           corepack enable
-          corepack prepare yarn@berry --activate
+          corepack prepare yarn@4.8.1 --activate
           yarn --version  # This should show your Yarn v2+ version
 
       - name: Cypress run
