--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Enable and use Corepack for Yarn
         run: |
           corepack enable
-          corepack prepare yarn@berry --activate
+          corepack prepare yarn@4.8.1 --activate
           yarn --version  # This should show your Yarn v2+ version
 
       - name: Yarn install
