:arrow_up: Upgrade yarn/next version of distro

--- a/.gitignore
+++ b/.gitignore
@@ -45,9 +45,4 @@ cypress/screenshots
 
 # yarn
 .yarn/*
-!.yarn/cache
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
+service/.yarn/*
