:sparkles: Use packageManager field to define yarn dep

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,11 +19,8 @@ jobs:
         with:
           node-version: 20
 
-      - name: Enable and use Corepack for Yarn
-        run: |
-          corepack enable
-          corepack prepare yarn@4.8.1 --activate
-          yarn --version  # This should show your Yarn v2+ version
+      - name: Enable Corepack
+        run: corepack enable
 
       - name: Yarn install
         run: yarn
