--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,11 +16,8 @@ jobs:
         with:
           node-version: 20
 
-      - name: Enable and use Corepack for Yarn
-        run: |
-          corepack enable
-          corepack prepare yarn@4.8.1 --activate
-          yarn --version  # This should show your Yarn v2+ version
+      - name: Enable Corepack
+        run: corepack enable
 
       - name: Check out Git repository
         uses: actions/checkout@v4
