--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -23,11 +23,8 @@ jobs:
         with:
           node-version: 20
 
-      - name: Enable and use Corepack for Yarn
-        run: |
-          corepack enable
-          corepack prepare yarn@4.8.1 --activate
-          yarn --version  # This should show your Yarn v2+ version
+      - name: Enable Corepack
+        run: corepack enable
 
       - name: Cypress run
         uses: cypress-io/github-action@v5
