--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "engines": {
     "node": "20.x"
   },
+  "packageManager": "yarn@4.8.1",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
