⬆️ Upgrade nextjs to v15 (#326)
* :sparkles: Upgrade nextjs

* :sparkles: Upgrade toastify and fix some other bugs

* :broom: Cleanup unnecessary yarn

* :rotating_light: Fix missing typing

* :arrow_up: Upgrade md editor version

* :construction: Checking yarn issues with cypress

* :building_construction: Update github actions

* :building_construction: Specify yarn version

* :building_construction: Specify yarn version again

* :arrow_up: Upgrade yarn/next version of distro

* :broom: Cleanup trailing semicolons applied by codemod

* :sparkles: Use packageManager field to define yarn dep

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -23,12 +23,16 @@ jobs:
         with:
           node-version: 20
 
+      - name: Enable Corepack
+        run: corepack enable
+
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with:
           build: yarn build
           start: yarn start
           browser: chrome
+          install-command: yarn install
 
       - name: Setup Screenshot Artifacts
         if: failure()
