--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,14 +12,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install node 20
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 20
+
+      - name: Enable Corepack
+        run: corepack enable
+
       - name: Check out Git repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
       - name: Yarn install
         run: yarn
+
       - name: Typescript Check
         run: yarn type-check
+
       - name: Build
         run: yarn build
