--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "engines": {
     "node": "20.x"
   },
+  "packageManager": "yarn@4.8.1",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -21,28 +22,28 @@
     "@atproto/oauth-client-browser": "^0.2.0",
     "@atproto/oauth-types": "^0.1.4",
     "@atproto/xrpc": "^0.6.1",
-    "@headlessui/react": "^1.7.7",
+    "@headlessui/react": "^2.1.0",
     "@heroicons/react": "^2.0.13",
     "@tanstack/react-query": "^4.22.0",
     "@types/node": "18.11.17",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
-    "@uiw/react-md-editor": "^3.23.5",
+    "@types/react": "19.1.0",
+    "@types/react-dom": "19.1.1",
+    "@uiw/react-md-editor": "^4.0.5",
     "bcp-47-match": "^2.0.3",
     "date-fns": "^2.29.3",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.4",
+    "eslint-config-next": "15.2.4",
     "hls.js": "^1.5.13",
     "kbar": "^0.1.0-beta.45",
     "lande": "^1.0.10",
-    "next": "14.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "15.2.4",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-dropzone": "^14.3.5",
     "react-json-view": "1.21.3",
     "react-tailwindcss-select": "^1.8.5",
     "react-tetris": "^0.3.0",
-    "react-toastify": "^9.1.1",
+    "react-toastify": "^11.0.5",
     "react-use": "^17.4.0",
     "remark": "^14.0.3",
     "remark-html": "^15.0.2",
@@ -58,7 +59,9 @@
     "tailwindcss": "^3.2.4"
   },
   "resolutions": {
-    "jackspeak": "2.1.1"
+    "jackspeak": "2.1.1",
+    "@types/react": "19.1.0",
+    "@types/react-dom": "19.1.1"
   },
   "volta": {
     "node": "20.9.0"
