--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.8",
     "autoprefixer": "^10.4.13",
-    "cypress": "^13.16.1",
+    "cypress": "^14.3.0",
+    "eslint-plugin-cypress": "^4.2.1",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
   },
