--- a/.github/workflows/build-and-push-ghcr.yaml
+++ b/.github/workflows/build-and-push-ghcr.yaml
@@ -15,6 +15,7 @@ env:
 
 jobs:
   ozone-container-ghcr:
+    if: github.repository == 'bluesky-social/ozone'
     runs-on: ubuntu-latest
     permissions:
       contents: read
