:sparkles: Create account manage tab and add revoke credentials section
:sparkles: Add account revoke in workspace

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,7 @@
       "@/setting/*": ["components/setting/*"],
       "@/team/*": ["components/team/*"],
       "@/safelink/*": ["components/safelink/*"],
+      "@/email/*": ["components/email/*"],
     }
   },
   "include": [
