--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "e2e:run": "$(yarn bin)/cypress run --browser chrome"
   },
   "dependencies": {
-    "@atproto/api": "0.17.1",
+    "@atproto/api": "link:../atproto/packages/api/dist",
     "@atproto/oauth-client-browser": "^0.2.0",
     "@atproto/oauth-types": "^0.1.4",
     "@atproto/xrpc": "^0.6.1",
